--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.weedow</groupId>
     <artifactId>schema-org-parent</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
 
     <name>schema-org-java-parent</name>
@@ -13,7 +12,7 @@
     <url>https://github.com/Kobee1203/schema-org-java</url>
 
     <scm>
-        <tag>HEAD</tag>
+        <tag>0.9.0</tag>
         <url>https://github.com/Kobee1203/schema-org-java</url>
         <connection>scm:git:https://github.com/Kobee1203/schema-org-java.git</connection>
         <developerConnection>scm:git:https://github.com/Kobee1203/schema-org-java.git</developerConnection>
